--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
-
+			<p><li>
+				<a href="">
+					<em>Event-Driven Storytelling with Multiple Lifelike Humans in a 3D scene,</em>
+				</a><br>
+				Donggeun Lim, Jinseok Bae, Inwoo Hwang, Seungmin Lee, <b>Hwanhee Lee</b>, Young Min Kim<br>ICCV 2025			
+			</li></p>
+	
 			<p><li>
 				<a href="https://arxiv.org/abs/2502.11423">
 					<em>Exploring Persona Sentiment Sensitivity in Personalized Dialogue Generation,</em>
