--- a/index.html
+++ b/index.html
@@ -97,13 +97,38 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
+
 			<p><li>
-				<a href="">
+				<a href="https://arxiv.org/abs/2505.15805">
+					<em>Keep Security! Benchmarking Security Policy Preservation in Large Language Model Contexts Against Indirect Attacks in Question Answering,</em>
+				</a><br>
+				Hwan Chang*, Yumin Kim*, YongHyeon Jun, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
+			</li></p>
+			<p><li>
+				<a href="https://arxiv.org/abs/2505.16297">
+					<em>ToDi: Token-wise Distillation via Fine-Grained Divergence Control,</em>
+				</a><br>
+				Seongryong Jung, Suwan Yoon, DongGeon Kim,, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
+			</li></p>	
+			<p><li>
+				<a href="https://arxiv.org/abs/2505.15865">
+					<em>How Do Large Vision-Language Models See Text in Image? Unveiling the Distinctive Role of OCR Heads,</em>
+				</a><br>
+				Ingeol Baek, Hwan Chang, Sunghyun Ryu, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
+			</li></p>	
+			<p><li>
+				<a href="https://arxiv.org/abs/2502.11438">
+					<em>SAFE-SQL: Self-Augmented In-Context Learning with Fine-grained Example Selection for Text-to-SQL,</em>
+				</a><br>
+				Jimin Lee, Ingeol Baek, Byeongjeong Kim, Hyunkyung Bae, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
+			</li></p>	
+			<p><li>
+				<a href="https://arxiv.org/abs/2507.19232">
 					<em>Event-Driven Storytelling with Multiple Lifelike Humans in a 3D scene,</em>
 				</a><br>
 				Donggeun Lim, Jinseok Bae, Inwoo Hwang, Seungmin Lee, <b>Hwanhee Lee</b>, Young Min Kim<br>ICCV 2025			
 			</li></p>
-	
+
 			<p><li>
 				<a href="https://arxiv.org/abs/2502.11423">
 					<em>Exploring Persona Sentiment Sensitivity in Personalized Dialogue Generation,</em>
