--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<a href="https://arxiv.org/abs/2505.16297">
 					<em>ToDi: Token-wise Distillation via Fine-Grained Divergence Control,</em>
 				</a><br>
-				Seongryong Jung, Suwan Yoon, DongGeon Kim,, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
+				Seongryong Jung, Suwan Yoon, DongGeon Kim, <b>Hwanhee Lee✝</b><br> EMNLP 2025			
 			</li></p>	
 			<p><li>
 				<a href="https://arxiv.org/abs/2505.15865">
