--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
-
+			<p><li>
+				<a href="https://arxiv.org/abs/2502.11789">
+					<em>Personality Editing for Language Models through Adjusting Self-Referential Queries,</em>
+				</a><br>
+				Seojin Hwang, Yumin Kim, Byeongjeong Kim, Donghoon Shin, <b>Hwanhee Lee✝</b><br> EACL 2026			
+			</li></p>
 			<p><li>
 				<a href="https://arxiv.org/abs/2505.15805">
 					<em>Keep Security! Benchmarking Security Policy Preservation in Large Language Model Contexts Against Indirect Attacks in Question Answering,</em>
