--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 <ul>
 		        <!--<h4 id="conferences">International Conference Publications</h4>-->
 			<p><li>
+				<a href="https://arxiv.org/abs/2509.22830">
+					<em>ChatInject: Abusing Chat Templates for Prompt Injection in LLM Agents,</em>
+				</a><br>
+				Hwan Chang*, YongHyeon Jun*, <b>Hwanhee Lee✝</b><br> ICLR 2026			
+			</li></p>	
+			<p><li>
 				<a href="https://arxiv.org/abs/2502.11789">
 					<em>Personality Editing for Language Models through Adjusting Self-Referential Queries,</em>
 				</a><br>
