--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       </header>
       <section>
       <p>I am an Assistant Professor in Department of AI at Chung-Ang University, Seoul, Korea. My Research Interest is in the field of Natural Language Processing, especially about
-(i) Natural Language Generation and Evaluation,
-(ii) Factual Consistency Evaluation and Optimization,
-	      and (iii) Truthful and Safe Language Models. <br><br>I've been working in the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
+(i) Context Engineering and Memory of Language Models,
+(ii) Verifiable Safety and Policy Alignment in Language Agents,
+	      and (iii) Collaborative Intelligence in Multi-Agent Systems. <br><br>I've been working in the Department of Artificial Intelligence at Chung-Ang University from March, 2023 as an Assistant Professor. If you're interested in the lab, please visit <a href="https://sites.google.com/view/cau-li/">this page.</a></p>
 
 <h3 id="education">Education</h3>
 
